@@ -5,6 +5,7 @@ plugins {
 	id("io.spring.dependency-management") version "1.1.7"
 	kotlin("plugin.jpa") version "1.9.25"
 	kotlin("kapt") version "2.1.0"
+	id("jacoco")
 }
 
 group = "com.musinsa"
@@ -25,6 +26,8 @@ configurations {
 repositories {
 	mavenCentral()
 }
+
+//apply(plugin = "jacoco")
 
 dependencies {
 	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
@@ -48,10 +51,18 @@ dependencies {
 	developmentOnly("org.springframework.boot:spring-boot-devtools")
 	runtimeOnly("com.h2database:h2")
 	annotationProcessor("org.projectlombok:lombok")
+
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
-	testImplementation("org.jetbrains.kotlin:kotlin-test-junit5")
-	testImplementation("org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4")
-	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+	testImplementation("org.springframework.boot:spring-boot-starter-web")
+	testImplementation("org.mockito:mockito-core:5.15.2") // 최신 버전
+	testImplementation("org.mockito:mockito-inline:5.2.0") // 인라인 Mock 지원
+
+	// Kotest
+	testImplementation("io.kotest:kotest-runner-junit5:5.9.1") // Kotest JUnit 5 실행기
+	testImplementation("io.kotest:kotest-assertions-core:5.9.1") // Kotest Assertion
+	testImplementation("io.kotest:kotest-property:5.9.1") // Property-based 테스트 (선택 사항)
+	testImplementation("io.mockk:mockk:1.13.16")
+	testImplementation("com.ninja-squad:springmockk:4.0.2")
 }
 
 kotlin {
@@ -66,6 +77,29 @@ allOpen {
 	annotation("jakarta.persistence.Embeddable")
 }
 
+jacoco {
+	toolVersion = "0.8.10"
+}
+
+tasks.test {
+	testLogging {
+		showStandardStreams = true
+	}
+}
+
+tasks.jacocoTestReport {
+	dependsOn(tasks.test)
+	reports {
+		xml.required.set(true)
+		html.required.set(true)
+	}
+}
+
 tasks.withType<Test> {
+	jvmArgs("-Djdk.instrument.traceUsage=false", "-XX:+EnableDynamicAgentLoading")
+	jvmArgs("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED")
+	jvmArgs("-javaagent:${configurations.testRuntimeClasspath.get().filter { it.name.contains("byte-buddy-agent") }.singleFile}")
+	systemProperty("kotest.framework.classpath.scanning.autoscan.disable", "true")
+	systemProperty("mockito.mock-maker", "inline")
 	useJUnitPlatform()
 }
